opam-version: "2.0"
version: "1.0"
maintainer: "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
authors: [
  "Sai Venkata Krishnan <saiganesha5.svkv@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/mirage/hacl"
bug-reports: "https://github.com/mirage/hacl/issues"
dev-repo: "git+https://github.com/mirage/hacl.git"
doc: "https://mirage.github.io/hacl/doc"

build: [
 ["dune" "subst"] {pinned}
 ["dune" "build" "-x" "riscv" "-p" "hacl-sha2-256" "-j" jobs]
 ["dune" "runtest" "-p" name] {with-test}
]

depends: [
  "dune" {>= "1.7.0"}
  "cstruct-riscv" {>= "3.5.0"}
  "eqaf-riscv"
  "ppx_deriving_yojson" {with-test}
  "yojson" {with-test & >= "1.6.0"}
  "hex" {with-test}  
]
synopsis: "Primitives for SHA-256 taken from Project Everest"
description: """
This is an implementation of the SHA-256 algorithm, using code from
Project Everest.

Cryptographic primitives should not be used in end applications, they are better
used as part of a cryptographic library.
"""
